feat: deploy cicd pipeline and helmcharts

--- a/cicd-pipeline/helmcharts/templates/serviceaccount.yaml
+++ b/cicd-pipeline/helmcharts/templates/serviceaccount.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "charts-frontend-platform.serviceAccountName" . }}
+  name: {{ include "charts-frontend-site.serviceAccountName" . }}
   namespace: {{ .Values.namespace }}
   labels:
-    name: {{ include "charts-frontend-platform.fullname" . }}
-    {{- include "charts-frontend-platform.labels" . | nindent 4 }}
+    name: {{ include "charts-frontend-site.fullname" . }}
+    {{- include "charts-frontend-site.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
