--- a/cicd-pipeline/helmcharts/Chart.yaml
+++ b/cicd-pipeline/helmcharts/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: frontend-platform
-description: A Helm chart for Bren's frontend
+name: frontend-site
+description: A Helm chart for Bren's site
 type: application
 
 # Fellow, developer: please increment the tag above to the upcoming value: 
