--- a/cicd-pipeline/helmcharts/templates/deployment.yaml
+++ b/cicd-pipeline/helmcharts/templates/deployment.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "charts-frontend-platform.fullname" . }}
+  name: {{ include "charts-frontend-site.fullname" . }}
   namespace: {{ .Values.namespace }}
   labels:
-    name: {{ include "charts-frontend-platform.fullname" . }}
-    {{- include "charts-frontend-platform.labels" . | nindent 4 }}
+    name: {{ include "charts-frontend-site.fullname" . }}
+    {{- include "charts-frontend-site.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
-      {{- include "charts-frontend-platform.selectorLabels" . | nindent 6 }}
+      {{- include "charts-frontend-site.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -20,7 +20,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "charts-frontend-platform.labels" . | nindent 8 }}
+        {{- include "charts-frontend-site.labels" . | nindent 8 }}
         {{- with .Values.podLabels }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
@@ -29,7 +29,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "charts-frontend-platform.serviceAccountName" . }}
+      serviceAccountName: {{ include "charts-frontend-site.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
@@ -43,86 +43,16 @@ spec:
               containerPort: {{ .Values.service.port }}
               protocol: TCP
           env:
-          - name: NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY
-            valueFrom:
-              secretKeyRef:
-                name: {{ .Values.config.name }}-credentials
-                key: next-public-stripe-publishable-key
-          - name: SENTRY_DSN
-            valueFrom:
-              secretKeyRef:
-                name: {{ .Values.config.name }}-credentials
-                key: sentry-dsn
-          - name: NEXT_PUBLIC_ZAPSIGN_URL
-            valueFrom:
-              secretKeyRef:
-                name: {{ .Values.config.name }}-credentials
-                key: next-public-zapsign-url
-          - name: SENTRY_AUTH_TOKEN
-            valueFrom:
-              secretKeyRef:
-                name: {{ .Values.config.name }}-credentials
-                key: sentry-auth-token
-          - name: NEXT_PUBLIC_BRDID_URL
-            valueFrom:
-              secretKeyRef:
-                name: {{ .Values.config.name }}-credentials
-                key: next-public-brdid-url
-          - name: NEXT_PUBLIC_CNPJWS_TOKEN
-            valueFrom:
-              secretKeyRef:
-                name: {{ .Values.config.name }}-credentials
-                key: next-public-cnpjws-token
-          - name: NEXT_PUBLIC_STRIPE_TRIMESTRAL_PRICE_ID
-            valueFrom:
-              secretKeyRef:
-                name: {{ .Values.config.name }}-credentials
-                key: next-public-stripe-trimestral-price-id
-          - name: NEXT_PUBLIC_STRIPE_SEMESTRAL_PRICE_ID
-            valueFrom:
-              secretKeyRef:
-                name: {{ .Values.config.name }}-credentials
-                key: next-public-stripe-semestral-price-id
-          - name: NEXT_PUBLIC_STRIPE_ANUAL_PRICE_ID
-            valueFrom:
-              secretKeyRef:
-                name: {{ .Values.config.name }}-credentials
-                key: next-public-stripe-anual-price-id
-          - name: NEXT_PUBLIC_TTL
-            valueFrom:
-              secretKeyRef:
-                name: {{ .Values.config.name }}-credentials
-                key: next-public-ttl
-          - name: NEXT_PUBLIC_PUSHER_CLUSTER
-            valueFrom:
-              secretKeyRef:
-                name: {{ .Values.config.name }}-credentials
-                key: next-public-pusher-cluster
-          - name: NEXT_PUBLIC_INTERCOM_APP_ID
-            valueFrom:
-              secretKeyRef:
-                name: {{ .Values.config.name }}-credentials
-                key: next-public-intercom-app-id
-          - name: NEXT_PUBLIC_INTERCOM_SECRET_KEY
-            valueFrom:
-              secretKeyRef:
-                name: {{ .Values.config.name }}-credentials
-                key: next-public-intercom-secret-key
           - name: NEXT_PUBLIC_API_URL
             valueFrom:
               secretKeyRef:
                 name: {{ .Values.config.name }}-credentials
                 key: next-public-api-url
-          - name: NEXT_PUBLIC_PUSHER_PUB_KEY
+          - name: NEXT_PUBLIC_FRONTEND_PLATFORM
             valueFrom:
               secretKeyRef:
                 name: {{ .Values.config.name }}-credentials
-                key: next-public-pusher-pub-key
-          - name: NEXT_PUBLIC_BROADCASTER_URL
-            valueFrom:
-              secretKeyRef:
-                name: {{ .Values.config.name }}-credentials
-                key: next-public-broadcaster-url
+                key: next-public-frontend-platform
           livenessProbe:
             {{- toYaml .Values.livenessProbe | nindent 12 }}
           readinessProbe:
