--- a/cicd-pipeline/helmcharts/templates/hpa.yaml
+++ b/cicd-pipeline/helmcharts/templates/hpa.yaml
@@ -2,16 +2,16 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "charts-frontend-platform.fullname" . }}
+  name: {{ include "charts-frontend-site.fullname" . }}
   namespace: {{ .Values.namespace }}
   labels:
-    name: {{ include "charts-frontend-platform.fullname" . }}
-    {{- include "charts-frontend-platform.labels" . | nindent 4 }}
+    name: {{ include "charts-frontend-site.fullname" . }}
+    {{- include "charts-frontend-site.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "charts-frontend-platform.fullname" . }}
+    name: {{ include "charts-frontend-site.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
