--- a/cicd-pipeline/helmcharts/templates/service.yaml
+++ b/cicd-pipeline/helmcharts/templates/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "charts-frontend-platform.fullname" . }}
+  name: {{ include "charts-frontend-site.fullname" . }}
   namespace: {{ .Values.namespace }}
   labels:
-    name: {{ include "charts-frontend-platform.fullname" . }}
-    {{- include "charts-frontend-platform.labels" . | nindent 4 }}
+    name: {{ include "charts-frontend-site.fullname" . }}
+    {{- include "charts-frontend-site.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -13,7 +13,7 @@ spec:
       targetPort: {{ .Values.service.port }}
       protocol: TCP
   selector:
-    {{- include "charts-frontend-platform.selectorLabels" . | nindent 4 }}
+    {{- include "charts-frontend-site.selectorLabels" . | nindent 4 }}
   {{- if .Values.service.loadBalancerIP }}
   loadBalancerIP: {{ .Values.service.loadBalancerIP }}
   {{- end }}
