--- a/cicd-pipeline/helmcharts/values.yaml
+++ b/cicd-pipeline/helmcharts/values.yaml
@@ -43,7 +43,7 @@ securityContext: {}
 service:
   type: LoadBalancer
   port: 3000
-  # loadBalancerIP: "34.139.118.221"
+  loadBalancerIP: "34.74.77.2"
 
 ingress:
   enabled: false
