--- a/cicd-pipeline/helmcharts/values-staging.yaml
+++ b/cicd-pipeline/helmcharts/values-staging.yaml
@@ -6,7 +6,7 @@ namespace: frontend-site
 replicaCount: 1
 
 image:
-  repository: ""
+  repository: us-central1-docker.pkg.dev/staging-400918/frontend-site/frontend-site
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
@@ -43,7 +43,7 @@ securityContext: {}
 service:
   type: LoadBalancer
   port: 3000
-  loadBalancerIP: "34.74.77.2"
+  # loadBalancerIP: "34.74.77.2"
 
 ingress:
   enabled: false
@@ -116,5 +116,5 @@ DSN_SENTRY: "https://263e2b0943474ebfbfbaed8f1fc6b4e1@o4505924050485248.ingest.u
 
 config:
   name: config
-  nextPublicapiUrl: "http://platform.dev.wearebren.com:8000/api"
-  nextPublicFrontendPlatform: "http://frontend.dev.wearebren.com:3000/" # NEXT_PUBLIC_FRONT_END_PLATFORM
+  nextPublicapiUrl: "http://platform.staging.wearebren.com:8000/api"
+  nextPublicFrontendPlatform: "http://frontend.staging.wearebren.com:3000/" # NEXT_PUBLIC_FRONT_END_PLATFORM
