--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -20,7 +20,8 @@ env:
   DEPLOYMENT_NAME: frontend-site-staging
   REPOSITORY: frontend-site
   IMAGE: frontend-site
-  GCS_BUCKET: image_tag
+  STG_GCS_BUCKET: staging_promotion_instance
+  PRD_GCS_BUCKET: production_promotion_instance
 
 jobs:
   promote_to_staging:
@@ -45,11 +46,15 @@ jobs:
 
       - name: Download image tag from GCS
         run: |
-          gsutil cp gs://${{ env.GCS_BUCKET }}/image_tag.txt .
+          gsutil cp gs://${{ env.STG_GCS_BUCKET }}/${{ env.REPOSITORY }}/image_tag.txt .
 
       - name: Verify image tag downloaded
         run: |
           cat image_tag.txt
+
+      - name: List files in current directory (debugging step)
+        run: |
+          ls -l
 
       - name: Set up ArgoCD CLI
         uses: clowdhaus/argo-cd-action@main
@@ -86,6 +91,10 @@ jobs:
         run: |
           argocd app sync ${DEPLOYMENT_NAME} --server argocd.wearebren.com --insecure
 
+      - name: Save image tag for production promotion
+        run: |
+          gsutil cp image_tag.txt gs://${{ env.PRD_GCS_BUCKET }}/${{ env.REPOSITORY }}/image_tag.txt          
+
       - name: Delete image tag from GCS
         run: |
-          gsutil rm gs://${{ env.GCS_BUCKET }}/image_tag.txt
+          gsutil rm gs://${{ env.STG_GCS_BUCKET }}/${{ env.REPOSITORY }}/image_tag.txt
