--- a/cicd-pipeline/helmcharts/values-staging.yaml
+++ b/cicd-pipeline/helmcharts/values-staging.yaml
@@ -46,21 +46,13 @@ service:
   # loadBalancerIP: "34.173.191.82"
 
 ingress:
-  enabled: false
+  enabled: true
   className: ""
-  annotations: {}
-  # kubernetes.io/ingress.global-static-ip-name: ""34.74.77.2""
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: staging.site.wearebren.com
       paths:
         - path: /
-          pathType: ImplementationSpecific
-  tls: 
-   - secretName: bren-certificado-tls
-     hosts:
-      #  - "34.74.77.2"
+          pathType: Prefix
 
 resources:
   limits:
