--- a/cicd-pipeline/helmcharts/values-dev.yaml
+++ b/cicd-pipeline/helmcharts/values-dev.yaml
@@ -21,17 +21,7 @@ service:
   port: 3000
   loadBalancerIP: 34.74.77.2
 ingress:
-  enabled: false
-  className: ''
-  annotations: {}
-  hosts:
-  - host: chart-example.local
-    paths:
-    - path: /
-      pathType: ImplementationSpecific
-  tls:
-  - secretName: bren-certificado-tls
-    hosts: null
+  hosts: site.dev.wearebren.com
 resources:
   limits:
     cpu: 300m
