feat: ingress and tls creation

--- a/cicd-pipeline/helmcharts/values-dev.yaml
+++ b/cicd-pipeline/helmcharts/values-dev.yaml
@@ -21,7 +21,7 @@ service:
   port: 3000
   loadBalancerIP: 34.74.77.2
 ingress:
-  hosts: site.dev.wearebren.com
+  host: site.dev.wearebren.com
 resources:
   limits:
     cpu: 300m
