--- a/cicd-pipeline/helmcharts/values-staging.yaml
+++ b/cicd-pipeline/helmcharts/values-staging.yaml
@@ -46,7 +46,7 @@ service:
   # loadBalancerIP: "34.173.191.82"
 
 ingress:
-  hosts: staging.site.wearebren.com
+  host: staging.site.wearebren.com
 
 resources:
   limits:
