--- a/cicd-pipeline/helmcharts/values-dev.yaml
+++ b/cicd-pipeline/helmcharts/values-dev.yaml
@@ -1,67 +1,27 @@
-# Default values for charts-frontend-site.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
 namespace: frontend-site
 replicaCount: 1
-
 image:
   repository: us-central1-docker.pkg.dev/staging-400918/frontend-site/frontend-site
   pullPolicy: Always
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
-
+  tag: ''
 imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
-
+nameOverride: ''
+fullnameOverride: ''
 serviceAccount:
-  # Specifies whether a service account should be created
   create: true
-  # Automatically mount a ServiceAccount's API credentials?
   automount: true
-  # Annotations to add to the service account
   annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
-
+  name: ''
 podAnnotations: {}
 podLabels: {}
-
 podSecurityContext: {}
-  # fsGroup: 2000
-
 securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
 service:
   type: LoadBalancer
   port: 3000
-  loadBalancerIP: "34.74.77.2"
-
+  loadBalancerIP: 34.74.77.2
 ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-  # kubernetes.io/ingress.global-static-ip-name: ""34.74.77.2""
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: 
-   - secretName: bren-certificado-tls
-     hosts:
-      #  - "34.74.77.2"
-
+  host: site.dev.wearebren.com
 resources:
   limits:
     cpu: 300m
@@ -69,52 +29,19 @@ resources:
   requests:
     cpu: 100m
     memory: 256Mi
-
-# livenessProbe:
-#   httpGet:
-#     path: /api/hello-world/healthcheck
-#     port: 8080
-#     host: localhost
-#   initialDelaySeconds: 20
-#   timeoutSeconds: 3
-#   failureThreshold: 2
-# readinessProbe:
-#   httpGet:
-#     path: /api/hello-world/healthcheck
-#     port: 8080
-#     host: localhost
-#   initialDelaySeconds: 10
-#   timeoutSeconds: 1
-
 autoscaling:
   enabled: true
   minReplicas: 1
   maxReplicas: 15
   targetCPUUtilizationPercentage: 85
   targetMemoryUtilizationPercentage: 85
-
-# Additional volumes on the output Deployment definition.
 volumes: []
-# - name: foo
-#   secret:
-#     secretName: mysecret
-#     optional: false
-
-# Additional volumeMounts on the output Deployment definition.
 volumeMounts: []
-# - name: foo
-#   mountPath: "/etc/foo"
-#   readOnly: true
-
 nodeSelector: {}
-
 tolerations: []
-
 affinity: {}
-
-DSN_SENTRY: "https://263e2b0943474ebfbfbaed8f1fc6b4e1@o4505924050485248.ingest.us.sentry.io/4507426140585984"
-
+DSN_SENTRY: https://263e2b0943474ebfbfbaed8f1fc6b4e1@o4505924050485248.ingest.us.sentry.io/4507426140585984
 config:
   name: config
-  nextPublicapiUrl: "http://platform.dev.wearebren.com:8000/api"
-  nextPublicFrontendPlatform: "http://frontend.dev.wearebren.com:3000/" # NEXT_PUBLIC_FRONT_END_PLATFORM
+  nextPublicapiUrl: http://platform.dev.wearebren.com:8000/api
+  nextPublicFrontendPlatform: http://frontend.dev.wearebren.com:3000/
