--- a/cicd-pipeline/helmcharts/values-production.yaml
+++ b/cicd-pipeline/helmcharts/values-production.yaml
@@ -45,22 +45,9 @@ service:
   port: 3000
   # loadBalancerIP: "34.173.191.82"
 
+
 ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-  # kubernetes.io/ingress.global-static-ip-name: ""34.74.77.2""
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: 
-   - secretName: bren-certificado-tls
-     hosts:
-      #  - "34.74.77.2"
+  host: wearebren.com
 
 resources:
   limits:
