ingress and services (#12)
* feat: staging promotion workflow

* feat: staging promotion workflow

* feat: production promotion workflow set up

* fix: promotion workflows - subdirectory addition

* fix: changing network service paradigm to NodePort type

* feat: production promotion workflow

* feat: ingress and tls creation

* feat: ingress and tls creation

* feat: ingress and tls creation

* feat: ingress and tls creation

* feat: ingress and tls creation

* fix identation

* feat: ingress and tls creation

* feat: ingress and tls creation

* feat: ingress and tls creation

* feat: ingress and tls creation

* feat: ingress and tls creation

* feat: ingress and tls creation

* feat: ingress and tls creation

* feat: ingress and tls creation

* feat: ingress and tls creation

* feat: ingress and tls creation

* feat: ingress and tls creation

---------

Co-authored-by: Matheus Ramos <matheus-ramos@debian-workspace.bren>
Co-authored-by: Alice  Paixão <alicepaixao.thoughtworks@latam.com>

--- a/cicd-pipeline/helmcharts/templates/ingress.yaml
+++ b/cicd-pipeline/helmcharts/templates/ingress.yaml
@@ -1,10 +1,10 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: frontend-site-staging
-  namespace: frontend-site
+  name: {{ include "charts-frontend-site.fullname" . }}
+  namespace: {{ .Values.namespace }}
   labels:
-    name: {{ include "charts-frontend-site.fullname" . }}
+    name: {{ include "charts-frontend-site.fullname" . }} 
   annotations:
     kubernetes.io/ingress.class: "gce"
 spec:
@@ -16,6 +16,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: frontend-site-staging
+                name: {{ include "charts-frontend-site.fullname" . }}
                 port:
                   number: 80
