--- a/cicd-pipeline/helmcharts/values-production.yaml
+++ b/cicd-pipeline/helmcharts/values-production.yaml
@@ -103,5 +103,5 @@ DSN_SENTRY: "https://263e2b0943474ebfbfbaed8f1fc6b4e1@o4505924050485248.ingest.u
 
 config:
   name: config
-  nextPublicapiUrl: "http://platform.wearebren.com:8000/api"
-  nextPublicFrontendPlatform: "http://frontend.wearebren.com:3000/" # NEXT_PUBLIC_FRONT_END_PLATFORM
+  nextPublicapiUrl: "https://platform.wearebren.com/api"
+  nextPublicFrontendPlatform: "https://frontend.wearebren.com" # NEXT_PUBLIC_FRONT_END_PLATFORM
