--- a/cicd-pipeline/helmcharts/values-staging.yaml
+++ b/cicd-pipeline/helmcharts/values-staging.yaml
@@ -56,21 +56,18 @@ resources:
     cpu: 100m
     memory: 256Mi
 
-# livenessProbe:
-#   httpGet:
-#     path: /api/hello-world/healthcheck
-#     port: 8080
-#     host: localhost
-#   initialDelaySeconds: 20
-#   timeoutSeconds: 3
-#   failureThreshold: 2
-# readinessProbe:
-#   httpGet:
-#     path: /api/hello-world/healthcheck
-#     port: 8080
-#     host: localhost
-#   initialDelaySeconds: 10
-#   timeoutSeconds: 1
+readinessProbe:
+  httpGet:
+    path: /login
+    port: 3000
+  initialDelaySeconds: 30
+  periodSeconds: 5
+livenessProbe:
+  httpGet:
+    path: /login
+    port: 3000
+  initialDelaySeconds: 30
+  periodSeconds: 5
 
 autoscaling:
   enabled: true
