--- a/cicd-pipeline/helmcharts/templates/ingress.yaml
+++ b/cicd-pipeline/helmcharts/templates/ingress.yaml
@@ -1,10 +1,10 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "charts-communication-service.fullname" . }}
+  name: {{ include "charts-frontend-site.fullname" . }}
   namespace: {{ .Values.namespace }}
   labels:
-    name: {{ include "charts-communication-service.fullname" . }}
+    name: {{ include "charts-frontend-site.fullname" . }}
   annotations:
     kubernetes.io/ingress.class: "gce"
 spec:
@@ -16,6 +16,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: {{ include "charts-communication-service.fullname" . }}
+                name: {{ include "charts-frontend-site.fullname" . }}
                 port:
                   number: 80
