--- a/cicd-pipeline/helmcharts/values-production.yaml
+++ b/cicd-pipeline/helmcharts/values-production.yaml
@@ -57,13 +57,13 @@ resources:
 
 readinessProbe:
   httpGet:
-    path: /login
+    path: /
     port: 3000
   initialDelaySeconds: 30
   periodSeconds: 5
 livenessProbe:
   httpGet:
-    path: /login
+    path: /
     port: 3000
   initialDelaySeconds: 30
   periodSeconds: 5
