--- a/cicd-pipeline/helmcharts/values-staging.yaml
+++ b/cicd-pipeline/helmcharts/values-staging.yaml
@@ -58,13 +58,13 @@ resources:
 
 readinessProbe:
   httpGet:
-    path: /login
+    path: /
     port: 3000
   initialDelaySeconds: 30
   periodSeconds: 5
 livenessProbe:
   httpGet:
-    path: /login
+    path: /
     port: 3000
   initialDelaySeconds: 30
   periodSeconds: 5
