--- a/cicd-pipeline/helmcharts/templates/service.yaml
+++ b/cicd-pipeline/helmcharts/templates/service.yaml
@@ -7,13 +7,11 @@ metadata:
     name: {{ include "charts-frontend-site.fullname" . }}
     {{- include "charts-frontend-site.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.port }}
-      protocol: TCP
   selector:
     {{- include "charts-frontend-site.selectorLabels" . | nindent 4 }}
-  {{- if .Values.service.loadBalancerIP }}
-  loadBalancerIP: {{ .Values.service.loadBalancerIP }}
-  {{- end }}
+  ports:
+  - name: http
+    protocol: TCP
+    port: 80
+    targetPort: 3000
+  type: ClusterIP
