--- a/cicd-pipeline/helmcharts/values-production.yaml
+++ b/cicd-pipeline/helmcharts/values-production.yaml
@@ -6,7 +6,7 @@ namespace: frontend-site
 replicaCount: 1
 
 image:
-  repository: ""
+  repository: us-central1-docker.pkg.dev/staging-400918/frontend-site/frontend-site
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
@@ -41,26 +41,11 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: LoadBalancer
+  type: NodePort
   port: 3000
-  loadBalancerIP: "34.74.77.2"
 
 ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-  # kubernetes.io/ingress.global-static-ip-name: ""34.74.77.2""
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: 
-   - secretName: bren-certificado-tls
-     hosts:
-      #  - "34.74.77.2"
+  host: "wearebren.com"
 
 resources:
   limits:
@@ -70,21 +55,18 @@ resources:
     cpu: 100m
     memory: 256Mi
 
-# livenessProbe:
-#   httpGet:
-#     path: /api/hello-world/healthcheck
-#     port: 8080
-#     host: localhost
-#   initialDelaySeconds: 20
-#   timeoutSeconds: 3
-#   failureThreshold: 2
-# readinessProbe:
-#   httpGet:
-#     path: /api/hello-world/healthcheck
-#     port: 8080
-#     host: localhost
-#   initialDelaySeconds: 10
-#   timeoutSeconds: 1
+readinessProbe:
+  httpGet:
+    path: /
+    port: 3000
+  initialDelaySeconds: 30
+  periodSeconds: 5
+livenessProbe:
+  httpGet:
+    path: /
+    port: 3000
+  initialDelaySeconds: 30
+  periodSeconds: 5
 
 autoscaling:
   enabled: true
@@ -116,5 +98,5 @@ DSN_SENTRY: "https://263e2b0943474ebfbfbaed8f1fc6b4e1@o4505924050485248.ingest.u
 
 config:
   name: config
-  nextPublicapiUrl: "http://platform.dev.wearebren.com:8000/api"
-  nextPublicFrontendPlatform: "http://frontend.dev.wearebren.com:3000/" # NEXT_PUBLIC_FRONT_END_PLATFORM
+  nextPublicapiUrl: "https://platform.wearebren.com/api"
+  nextPublicFrontendPlatform: "https://frontend.wearebren.com/login" # NEXT_PUBLIC_FRONT_END_PLATFORM
