fix: host to app prefix

--- a/cicd-pipeline/helmcharts/values-dev.yaml
+++ b/cicd-pipeline/helmcharts/values-dev.yaml
@@ -20,7 +20,7 @@ service:
   type: NodePort
   port: 3000
 ingress:
-  host: "site.dev.wearebren.com"
+  host: "dev.wearebren.com"
 resources:
   limits:
     cpu: 300m
@@ -55,4 +55,4 @@ DSN_SENTRY: https://263e2b0943474ebfbfbaed8f1fc6b4e1@o4505924050485248.ingest.us
 config:
   name: config
   nextPublicapiUrl: https://platform.dev.wearebren.com/api
-  nextPublicFrontendPlatform: "https://frontend.dev.wearebren.com/login"
+  nextPublicFrontendPlatform: "https://api.dev.wearebren.com/login"
