--- a/cicd-pipeline/helmcharts/values-staging.yaml
+++ b/cicd-pipeline/helmcharts/values-staging.yaml
@@ -46,7 +46,7 @@ service:
   # loadBalancerIP: "34.173.191.82"
 
 ingress:
-  host: "site.staging.wearebren.com"
+  host: "staging.wearebren.com"
 
 resources:
   limits:
@@ -100,4 +100,4 @@ DSN_SENTRY: "https://263e2b0943474ebfbfbaed8f1fc6b4e1@o4505924050485248.ingest.u
 config:
   name: config
   nextPublicapiUrl: "https://platform.staging.wearebren.com/api"
-  nextPublicFrontendPlatform: "https://frontend.staging.wearebren.com/login" # NEXT_PUBLIC_FRONT_END_PLATFORM
+  nextPublicFrontendPlatform: "https://api.staging.wearebren.com/login" # NEXT_PUBLIC_FRONT_END_PLATFORM
