--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -22,6 +22,7 @@ env:
   IMAGE: frontend-site
   STG_GCS_BUCKET: staging_promotion_instance
   PRD_GCS_BUCKET: production_promotion_instance
+  ARGOCD_SERVER: argocd.wearebren.com  
 
 jobs:
   promote_to_staging:
@@ -83,13 +84,9 @@ jobs:
             --values-literal-file cicd-pipeline/helmcharts/values-staging.yaml \
             --dest-namespace ${REPOSITORY} \
             --sync-option CreateNamespace=true \
-            --sync-policy automated \
+            --sync-policy none \
             --insecure
-
-
-      - name: Sync Application
-        run: |
-          argocd app sync ${DEPLOYMENT_NAME} --server argocd.wearebren.com --insecure
+          argocd app sync ${DEPLOYMENT_NAME} --server $ARGOCD_SERVER --insecure
 
       - name: Save image tag for production promotion
         run: |
