--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next-themes": "^0.2.1",
     "pdf-thumbnail": "^1.0.6",
     "postcss": "8.4.41",
+    "prom-client": "^11.5.3",
     "pure-react-carousel": "^1.30.1",
     "rc-time-picker": "^3.7.3",
     "react": "^18.2.0",
