--- a/cicd-pipeline/helmcharts/templates/deployment.yaml
+++ b/cicd-pipeline/helmcharts/templates/deployment.yaml
@@ -43,7 +43,7 @@ spec:
               containerPort: {{ .Values.service.ports.http.targetPort }}
               protocol: TCP
             - name: metrics
-              containerPort: {{ .Values.service.ports.metrics.port }}
+              containerPort: {{ .Values.service.ports.metrics.targetPort }}
               protocol: TCP
           env:
           - name: NEXT_PUBLIC_API_URL
