fix: branch dev is not dev anymore

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Build and Deploy to GKE
 on:
   pull_request:
     branches:
-      - "main"
+      - "release"
 
 permissions:
   id-token: write
